# Sarvam-Omni

./: .gitignore  AGENT_INSTRUCTIONS.md  PROJECT_HISTORY.md  README.md  fix_paths.py  pyproject.toml  requirements.txt  run_all_tests.py  setup.sh  test_checkpoint.py
checkpoints/stage1_5/step_1000/lora/: README.md  adapter_config.json
configs/: train_stage1.yaml
inference/: demo.py  generate.py
logs/: checkpoint1_test_results.md
models/qwen3-vl-vit/: vision_config.json
sarvam_omni/: __init__.py  action_space.py  model.py  processor.py  projector.py  utils.py  vision_encoder.py
scripts/: cache_vision_features.py  checkpoint_at_1000.sh  download_vision_encoder.py  extract_vision_from_shard.py  monitor.sh  run_all_stages.sh  test_integration.py  verify_sarvam.py
training/: lora_config.py  train_agentic.py  train_grounding.py  train_midstage.py  train_projector.py
training/data/: aguvis_dataset.py  cached_dataset.py  llava_dataset.py
